apps/cilium/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cilium
  labels:
    app.kubernetes.io/part-of: cilium
